<resources>
    <string name="app_name">ClassInteraction</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <string name="roleList">Choose who you are</string>
    <string-array name="role_array">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
    <string name="title_activity_maps">Map</string>


    <string name="title_activity_maps2">Map</string>
    <string name="location_permission_denied">Location Permission denied</string>
    <string name="permission_required_toast">Permission REQUIRE TOAST</string>
    <string name="permission_rationale_location">permission rationale location</string>
    <string name="title_activity_maps3">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tutor_add_class">TutorAddClass</string>
    <string name="undo_string">UNDO</string>
    <string name="class_added">1 class is added.</string>

    <!--login's -->
    <string name="login_heading">Log in</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="login">Log in</string>
    <string name="register_link">No account yet? Create one</string>
    <!--register's -->
    <string name="register_heading">Register</string>
    <string name="register_button">Create account</string>
    <string name="retype_password">Retype password</string>
    <string name="name">Your name</string>
    <string name="login_link">Already a member? Login</string>
    <string name="class_password">Class Password</string>
    <string name="classPassword_retype">Re-enter Class Password</string>
    <string name="name_hint">Class Name</string>
    <string name="dialog_title">Prompt Text</string>
    <string name="hint_textDialog">Message Text Message Text \nMessage Text Message Text Message Text Message Text Message Text Message Text</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_checkin">Checkin</string>
    <string name="title_discussion">Discussion</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_signout">sign out</string>
    <string name="class_code">Enter class code</string>
    <string name="check_class">check class</string>
    <string name="checkin_added">1 location submitted</string> <!--register's -->


</resources>
