<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/cyan_light">

    <TextView
        android:id="@+id/tvPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etClassName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPrompt"
        android:inputType="textCapSentences"
        style="@style/TextStyle"
        android:hint="@string/name_hint"
        />

    <EditText
        android:id="@+id/etClassCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etClassName"
        style="@style/TextStyle"
        android:hint="@string/class_password"
        android:inputType="textCapSentences"
        />

    <EditText
        android:id="@+id/etClassCode02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etClassCode"
        style="@style/TextStyle"
        android:hint="@string/classPassword_retype"
        android:inputType="textCapSentences"
        />


    <Button
        android:id="@+id/btnCancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etClassCode02"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/btnOk"
        android:layout_toStartOf="@+id/btnOk"
        android:background="@color/cyan"
        android:text="@android:string/cancel" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etClassCode02"
        android:layout_marginTop="5dp"
        style="@style/Button.Primary"
        android:background="@color/cyan_dark"
        android:text="@android:string/ok" />

</RelativeLayout>